module_5/ex05/log/build_2024-11-17_21-07-23/my_movement/stderr.log
  File "/home/yuichi-katagiri/Subjects/Robotics/module_5/ex05/install/my_movement/lib/python3.10/site-packages/my_movement/star_movement.py", line 70
    return interpolated_points
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'return' outside function

